fix: fixed the alignment of the icon

--- a/packages/web-components/src/components/va-link-action/va-link-action.css
+++ b/packages/web-components/src/components/va-link-action/va-link-action.css
@@ -24,10 +24,9 @@
 }
 
 .link-icon--left {
-  margin-right: 10px;
+  margin-right: 8px;
   vertical-align: baseline;
   position: relative;
-  top: 3px;
 }
 
 .link-icon {
